--- a/env.example
+++ b/env.example
@@ -17,3 +17,15 @@ CSRF_TRUSTED_ORIGINS=http://localhost:3000
 ACCESS_TOKEN_LIFETIME_MINUTES=5
 REFRESH_TOKEN_LIFETIME_DAYS=7
 DB_CONN_MAX_AGE=60
+
+# Email Configuration (Mailgun)
+MAILGUN_SMTP_SERVER=smtp.mailgun.org
+MAILGUN_SMTP_PORT=587
+MAILGUN_SMTP_LOGIN=your-mailgun-smtp-login
+MAILGUN_SMTP_PASSWORD=your-mailgun-smtp-password
+DEFAULT_FROM_EMAIL=noreply@yourdomain.com
+FRONTEND_URL=http://localhost:3000
+
+# Celery Configuration (for Docker)
+CELERY_BROKER_URL=redis://redis:6379/0
+CELERY_RESULT_BACKEND=redis://redis:6379/0
