Add deployment documentation and configuration files for production setup
- Introduced comprehensive deployment guides including `DEPLOYMENT_GUIDE_NEW_USER.md` and `DEPLOYMENT.md` for new users and production environments.
- Added `docker-compose.prod.yml` for production Docker configuration, including Nginx, API, and database services.
- Created deployment scripts for server setup, SSL configuration, and application deployment in the `deploy/` directory.
- Updated `.gitignore` to exclude production deployment files and logs.
- Enhanced Nginx configuration for SSL and reverse proxy settings in `nginx/`.
- Implemented health check endpoint for monitoring application status.
- Added custom exception handling and middleware for improved API response management.
- Included new management commands for creating mock data and optimizing images.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - .env
     volumes:
       - .:/app
+      - media_files:/app/media
     depends_on:
       db:
         condition: service_healthy
@@ -54,6 +55,7 @@ services:
       - .env
     volumes:
       - .:/app
+      - media_files:/app/media
     depends_on:
       db:
         condition: service_healthy
@@ -65,11 +67,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: celery -A backend beat --loglevel=info
+    command: celery -A backend beat --loglevel=info -s /tmp/celerybeat-schedule
     env_file:
       - .env
     volumes:
       - .:/app
+      - celerybeat_schedule:/tmp
     depends_on:
       db:
         condition: service_healthy
@@ -80,4 +83,6 @@ services:
 volumes:
   postgres_data:
   redis_data:
+  celerybeat_schedule:
+  media_files:
 
