--- a/.gitignore
+++ b/.gitignore
@@ -45,4 +45,10 @@ Thumbs.db
 # Static asset builds
 staticfiles/
 
+# Production deployment files
+nginx/ssl/
+nginx/logs/
+backups/
+*.tar.gz
+deploy/*.log
 
