Refactor Nginx configuration for API to enhance proxying and SSL settings
- Updated the SSL configuration in `api.goholiday.id.conf` to enable HTTP/2 and improved clarity by using a variable for the upstream API address.
- Added Docker DNS resolver settings for better service discovery.
- Modified the HTTP-only configuration in `api.goholiday.id.http-only.conf` to align with the new upstream variable and included resolver settings for consistency.

--- a/nginx/api.goholiday.id.conf
+++ b/nginx/api.goholiday.id.conf
@@ -17,8 +17,9 @@ server {
 
 # HTTPS server
 server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443 ssl;
+    http2 on;
+    listen [::]:443 ssl;
     server_name api.goholiday.id;
 
     # SSL Configuration
@@ -52,6 +53,10 @@ server {
     access_log /var/log/nginx/api.goholiday.id.access.log main;
     error_log /var/log/nginx/api.goholiday.id.error.log warn;
 
+    # Docker DNS resolver
+    resolver 127.0.0.11 valid=30s;
+    set $upstream_api api:8000;
+
     # Media files
     location /media/ {
         alias /app/media/;
@@ -62,7 +67,7 @@ server {
 
     # Health check endpoint (no rate limiting)
     location /health/ {
-        proxy_pass http://api:8000/health/;
+        proxy_pass http://$upstream_api/health/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -74,7 +79,7 @@ server {
     location /api/ {
         limit_req zone=api_limit burst=20 nodelay;
         
-        proxy_pass http://api:8000;
+        proxy_pass http://$upstream_api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -97,7 +102,7 @@ server {
     location ~ ^/api/(v1/)?(account|auth)/.*/(login|register|password-reset|verify-email)/ {
         limit_req zone=login_limit burst=3 nodelay;
         
-        proxy_pass http://api:8000;
+        proxy_pass http://$upstream_api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -107,7 +112,7 @@ server {
 
     # API documentation
     location /api/schema/ {
-        proxy_pass http://api:8000/api/schema/;
+        proxy_pass http://$upstream_api/api/schema/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -116,7 +121,7 @@ server {
 
     # Default location
     location / {
-        proxy_pass http://api:8000;
+        proxy_pass http://$upstream_api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
