--- a/nginx/api.goholiday.id.http-only.conf
+++ b/nginx/api.goholiday.id.http-only.conf
@@ -1,19 +1,20 @@
-# Temporary HTTP-only server (use until SSL is set up)
+# HTTP-only server (use for initial deployment before SSL certificates)
 server {
     listen 80;
     listen [::]:80;
     server_name api.goholiday.id;
 
-    # Logging
     access_log /var/log/nginx/api.goholiday.id.access.log main;
     error_log /var/log/nginx/api.goholiday.id.error.log warn;
 
-    # Let's Encrypt challenge
+    # Docker DNS resolver
+    resolver 127.0.0.11 valid=30s;
+    set $upstream_api api:8000;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
 
-    # Media files
     location /media/ {
         alias /app/media/;
         expires 7d;
@@ -21,9 +22,8 @@ server {
         access_log off;
     }
 
-    # Health check endpoint (no rate limiting)
     location /health/ {
-        proxy_pass http://api:8000/health/;
+        proxy_pass http://$upstream_api/health/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -31,24 +31,21 @@ server {
         access_log off;
     }
 
-    # API endpoints
     location /api/ {
-        proxy_pass http://api:8000;
+        proxy_pass http://$upstream_api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
         
-        # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
 
-    # Default location
     location / {
-        proxy_pass http://api:8000;
+        proxy_pass http://$upstream_api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -56,4 +53,3 @@ server {
         proxy_set_header X-Forwarded-Host $server_name;
     }
 }
-
