Add healthcheck configuration for Celery service in docker-compose.prod.yml
- Introduced a healthcheck for the Celery service to monitor its status, ensuring it is responsive and operational.
- Configured the healthcheck to use a command that pings the Celery worker, with specified intervals, timeouts, retries, and a start period for better reliability.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -125,6 +125,12 @@ services:
     restart: unless-stopped
     networks:
       - dcnetwork-network
+    healthcheck:
+      test: ["CMD-SHELL", "celery -A backend inspect ping -d celery@$$HOSTNAME || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     deploy:
       resources:
         limits:
