--- a/.gitattributes
+++ b/.gitattributes
@@ -1,29 +1,23 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-# Explicitly declare text files you want to always be normalized and converted
-# to native line endings on checkout.
-*.py text eol=lf
+# Shell scripts should always use LF
 *.sh text eol=lf
+
+# Docker files should use LF
+Dockerfile* text eol=lf
+docker-compose*.yml text eol=lf
+
+# Python files
+*.py text eol=lf
+
+# Configuration files
 *.yml text eol=lf
 *.yaml text eol=lf
 *.json text eol=lf
+*.toml text eol=lf
+
+# Other text files
 *.md text eol=lf
 *.txt text eol=lf
-*.html text eol=lf
-*.css text eol=lf
-*.js text eol=lf
 *.conf text eol=lf
-*.service text eol=lf
-
-# Denote all files that are truly binary and should not be modified.
-*.png binary
-*.jpg binary
-*.jpeg binary
-*.gif binary
-*.ico binary
-*.pdf binary
-*.zip binary
-*.tar.gz binary
-*.pyc binary
-
