Refactor DNS resolver settings in Nginx configuration for API
- Removed redundant resolver settings and consolidated them into a single line for clarity.
- Updated resolver timeout settings to ensure proper DNS resolution in the Docker environment.

--- a/nginx/api.goholiday.id.conf
+++ b/nginx/api.goholiday.id.conf
@@ -38,8 +38,6 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
     ssl_trusted_certificate /etc/nginx/ssl/api.goholiday.id/chain.pem;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
 
     # Security Headers
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
@@ -53,8 +51,9 @@ server {
     access_log /var/log/nginx/api.goholiday.id.access.log main;
     error_log /var/log/nginx/api.goholiday.id.error.log warn;
 
-    # Docker DNS resolver
-    resolver 127.0.0.11 valid=30s;
+    # DNS resolvers (Docker DNS and public DNS for OCSP)
+    resolver 127.0.0.11 8.8.8.8 8.8.4.4 valid=30s;
+    resolver_timeout 5s;
     set $upstream_api api:8000;
 
     # Media files
