Update Docker configuration and add deployment guides
- Changed healthcheck command in `docker-compose.prod.yml` to use HTTP instead of HTTPS for local health checks.
- Increased CPU and memory limits for the Celery service in `docker-compose.prod.yml` to improve performance.
- Added `RESET_AND_DEPLOY_GUIDE.md` to provide a comprehensive guide for resetting and deploying the application.
- Introduced `complete-reset.sh` and `fresh-start.sh` scripts to automate the reset and deployment processes, ensuring a smoother setup experience.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - dcnetwork-network
     healthcheck:
-      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "--no-check-certificate", "https://localhost/health/"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health/"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -134,11 +134,11 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.3'
-          memory: 128M
+          cpus: '0.5'
+          memory: 256M
         reservations:
-          cpus: '0.1'
-          memory: 64M
+          cpus: '0.2'
+          memory: 128M
 
   celery-beat:
     build:
