Update healthcheck commands in docker-compose.prod.yml for improved process detection
- Modified healthcheck commands for Nginx and Celery services to use `ps aux` with grep for more reliable process detection.
- Adjusted the command syntax to ensure proper matching of running processes, enhancing the accuracy of health checks.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,7 +17,7 @@ services:
     networks:
       - dcnetwork-network
     healthcheck:
-      test: ["CMD-SHELL", "pgrep nginx || exit 1"]
+      test: ["CMD-SHELL", "ps aux | grep '[n]ginx: master' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -172,7 +172,7 @@ services:
     networks:
       - dcnetwork-network
     healthcheck:
-      test: ["CMD-SHELL", "pgrep -f 'celery.*beat' || exit 1"]
+      test: ["CMD-SHELL", "ps aux | grep '[c]elery.*beat' || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
