--- a/nginx/api.goholiday.id.conf
+++ b/nginx/api.goholiday.id.conf
@@ -54,7 +54,14 @@ server {
     # DNS resolvers (Docker DNS and public DNS for OCSP)
     resolver 127.0.0.11 8.8.8.8 8.8.4.4 valid=30s;
     resolver_timeout 5s;
-    set $upstream_api api:8000;
+    
+    # Upstream configuration with keepalive and retry support
+    upstream api_backend {
+        server api:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
+        keepalive_timeout 60s;
+        keepalive_requests 100;
+    }
 
     # Media files
     location /media/ {
@@ -66,11 +73,16 @@ server {
 
     # Health check endpoint (no rate limiting)
     location /health/ {
-        proxy_pass http://$upstream_api/health/;
+        proxy_pass http://api_backend/health/;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 10s;
+        proxy_read_timeout 10s;
         access_log off;
     }
 
@@ -78,54 +90,83 @@ server {
     location /api/ {
         limit_req zone=api_limit burst=20 nodelay;
         
-        proxy_pass http://$upstream_api;
+        proxy_pass http://api_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
         
-        # Timeouts
-        proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        # Timeouts (increased for stability)
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 90s;
+        proxy_read_timeout 90s;
         
-        # Buffering
+        # Retry logic - retry on connection errors, timeouts, and 502/503/504
+        proxy_next_upstream error timeout http_502 http_503 http_504;
+        proxy_next_upstream_tries 2;
+        proxy_next_upstream_timeout 5s;
+        
+        # Buffering (enabled for better performance)
         proxy_buffering on;
         proxy_buffer_size 4k;
         proxy_buffers 8 4k;
         proxy_busy_buffers_size 8k;
+        proxy_request_buffering on;
     }
 
     # Login endpoints with stricter rate limiting
     location ~ ^/api/(v1/)?(account|auth)/.*/(login|register|password-reset|verify-email)/ {
         limit_req zone=login_limit burst=3 nodelay;
         
-        proxy_pass http://$upstream_api;
+        proxy_pass http://api_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
+        
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+        proxy_next_upstream error timeout http_502 http_503 http_504;
+        proxy_next_upstream_tries 2;
     }
 
     # API documentation
     location /api/schema/ {
-        proxy_pass http://$upstream_api/api/schema/;
+        proxy_pass http://api_backend/api/schema/;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
     }
 
     # Default location
     location / {
-        proxy_pass http://$upstream_api;
+        proxy_pass http://api_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $server_name;
+        
+        proxy_connect_timeout 10s;
+        proxy_send_timeout 90s;
+        proxy_read_timeout 90s;
+        proxy_next_upstream error timeout http_502 http_503 http_504;
+        proxy_next_upstream_tries 2;
     }
 }
 
