--- a/env.prod.example
+++ b/env.prod.example
@@ -25,10 +25,18 @@ ACCESS_TOKEN_LIFETIME_MINUTES=15
 REFRESH_TOKEN_LIFETIME_DAYS=30
 
 # Email Configuration (Mailgun)
-MAILGUN_SMTP_SERVER=smtp.mailgun.org
-MAILGUN_SMTP_PORT=587
-MAILGUN_SMTP_LOGIN=your-mailgun-smtp-login
-MAILGUN_SMTP_PASSWORD=your-mailgun-smtp-password
+# Option 1: Use Mailgun HTTP API (RECOMMENDED - bypasses SMTP port blocks)
+MAILGUN_API_KEY=your-mailgun-api-key
+MAILGUN_DOMAIN=goholiday.id
+# Optional: Use EU region (default is US)
+# MAILGUN_API_URL=https://api.eu.mailgun.net/v3
+
+# Option 2: Use SMTP (may be blocked by firewall - use API instead)
+# MAILGUN_SMTP_SERVER=smtp.mailgun.org
+# MAILGUN_SMTP_PORT=587
+# MAILGUN_SMTP_LOGIN=your-mailgun-smtp-login
+# MAILGUN_SMTP_PASSWORD=your-mailgun-smtp-password
+
 DEFAULT_FROM_EMAIL=noreply@goholiday.id
 FRONTEND_URL=https://www.goholiday.id
 
