--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,9 +8,9 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/api.goholiday.id.http-only.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
-      # Uncomment line below after SSL setup:
-      - ./nginx/api.goholiday.id.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
+      # Uncomment lines below after SSL setup:
+      # - ./nginx/api.goholiday.id.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
+      # - ./nginx/ssl:/etc/nginx/ssl:ro
       - media_volume:/app/media:ro
       - ./nginx/logs:/var/log/nginx
     depends_on:
