--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -44,11 +44,10 @@ http {
     add_header X-Frame-Options "DENY" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=login_limit:10m rate=5r/m;
+    # Rate limiting (optimized for 2GB RAM)
+    limit_req_zone $binary_remote_addr zone=api_limit:2m rate=10r/s;
+    limit_req_zone $binary_remote_addr zone=login_limit:1m rate=5r/m;
 
     # Hide nginx version
     server_tokens off;
