feat: Add handling for health check endpoint in Nginx configuration
- Implemented a redirect for the `/health` endpoint to `/health/` in both `api.goholiday.id.conf` and `api.goholiday.id.http-only.conf` to avoid unnecessary redirects.
- This change ensures consistent access to the health check endpoint across different configurations.

--- a/nginx/api.goholiday.id.http-only.conf
+++ b/nginx/api.goholiday.id.http-only.conf
@@ -22,6 +22,10 @@ server {
         access_log off;
     }
 
+    # Handle both /health and /health/ to avoid redirects
+    location = /health {
+        return 301 /health/;
+    }
     location /health/ {
         proxy_pass http://$upstream_api/health/;
         proxy_set_header Host $host;
