--- a/nginx/api.goholiday.id.conf
+++ b/nginx/api.goholiday.id.conf
@@ -72,6 +72,10 @@ server {
     }
 
     # Health check endpoint (no rate limiting)
+    # Handle both /health and /health/ to avoid redirects
+    location = /health {
+        return 301 /health/;
+    }
     location /health/ {
         proxy_pass http://api_backend/health/;
         proxy_http_version 1.1;
