chore: Update Nginx configuration in Docker Compose for SSL support
- Replaced the HTTP-only configuration with active SSL settings in `docker-compose.prod.yml`, enabling secure connections for `api.goholiday.id`.
- Commented out the previous HTTP-only config to streamline the deployment process and ensure proper SSL setup.

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,10 +7,10 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/api.goholiday.id.http-only.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
-      # Uncomment lines below after SSL setup:
-      # - ./nginx/api.goholiday.id.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
-      # - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./nginx/api.goholiday.id.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      # HTTP-only config (use when SSL certificates don't exist):
+      # - ./nginx/api.goholiday.id.http-only.conf:/etc/nginx/conf.d/api.goholiday.id.conf:ro
       - media_volume:/app/media:ro
       - ./nginx/logs:/var/log/nginx
     depends_on:
