--- a/env.prod.example
+++ b/env.prod.example
@@ -2,8 +2,8 @@
 DJANGO_SETTINGS_MODULE=backend.settings
 SECRET_KEY=change-me-to-secure-random-key
 DEBUG=0
-ALLOWED_HOSTS=api.goholiday.id,localhost,127.0.0.1
-CSRF_TRUSTED_ORIGINS=https://api.goholiday.id,https://www.goholiday.id
+ALLOWED_HOSTS=data.goholiday.id,localhost,127.0.0.1
+CSRF_TRUSTED_ORIGINS=https://data.goholiday.id,https://www.goholiday.id
 
 # Database Configuration
 DATABASE_URL=postgres://your-db-username:your-db-password@db:5432/travel_marketplace
