--- a/nginx/data.goholiday.id.http-only.conf
+++ b/nginx/data.goholiday.id.http-only.conf
@@ -2,10 +2,10 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name api.goholiday.id;
+    server_name data.goholiday.id;
 
-    access_log /var/log/nginx/api.goholiday.id.access.log main;
-    error_log /var/log/nginx/api.goholiday.id.error.log warn;
+    access_log /var/log/nginx/data.goholiday.id.access.log main;
+    error_log /var/log/nginx/data.goholiday.id.error.log warn;
 
     # Docker DNS resolver
     resolver 127.0.0.11 valid=30s;
@@ -57,3 +57,4 @@ server {
         proxy_set_header X-Forwarded-Host $server_name;
     }
 }
+
