--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,13 +19,13 @@ jobs:
           SSH_KEY: ${{ secrets.DO_SSH_PRIVATE_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          printf '%s\n' "$SSH_KEY" > ~/.ssh/github_deploy
+          chmod 600 ~/.ssh/github_deploy
           ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts 2>/dev/null
       
       - name: Deploy to DigitalOcean Droplet
         run: |
-          ssh -i ~/.ssh/id_rsa -p ${{ secrets.DO_SSH_PORT }} ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} << 'EOF'
+          ssh -i ~/.ssh/github_deploy -p ${{ secrets.DO_SSH_PORT }} ${{ secrets.DO_USERNAME }}@${{ secrets.DO_HOST }} << 'EOF'
           cd ${{ secrets.DO_PROJECT_PATH }}
           git pull origin main
           cd deploy
