--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,11 +14,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2
+      - name: Setup SSH Agent
+        uses: webfactory/ssh-agent@v0.9.0
         with:
-          key: ${{ secrets.DO_SSH_PRIVATE_KEY }}
-          known_hosts: 'placeholder'
+          ssh-private-key: ${{ secrets.DO_SSH_PRIVATE_KEY }}
       
       - name: Add Known Hosts
         run: ssh-keyscan -H ${{ secrets.DO_HOST }} >> ~/.ssh/known_hosts
